--- a/styles/style.scss
+++ b/styles/style.scss
@@ -9,41 +9,36 @@ html {
   box-sizing: border-box;
 }
 
-
 /*preloader*/
-.preload{
-  position:fixed;
+.preload {
+  position: fixed;
   top: 0;
   width: 100%;
   height: 100vh;
   background: #061a33;
   z-index: 1000000;
-  display:flex;
+  display: flex;
   justify-content: center;
   align-content: center;
- #preload-logo{
-   width: 30vw;
-   .wave{
-     stroke-dasharray: 1000;
-     stroke-dashoffset: 1000;
-     animation : dash 1s ease alternate infinite ;
-   }
-   @keyframes dash {
-     from{
-       stroke-dashoffset: 1000;
-     }
-     to{
-       stroke-dashoffset: 0;
-     }
-     
-   }
- }
+  #preload-logo {
+    width: 30vw;
+    .wave {
+      stroke-dasharray: 1000;
+      stroke-dashoffset: 1000;
+      animation: dash 1s ease alternate infinite;
+    }
+    @keyframes dash {
+      from {
+        stroke-dashoffset: 1000;
+      }
+      to {
+        stroke-dashoffset: 0;
+      }
+    }
+  }
 }
 
-
-
-
-.preload-finish{
+.preload-finish {
   display: none;
   pointer-events: none;
 }
@@ -56,56 +51,55 @@ body {
 }
 
 /* rotate your device*/
-.rotate{
-  position:fixed;
+.rotate {
+  position: fixed;
   top: 0;
   width: 100%;
   height: 100vh;
   background: #061a33;
   z-index: 100000;
-  display:grid;
+  display: grid;
   flex-direction: column;
   align-content: center;
   display: none;
-  
+
   .phone {
-  height: 50px;
-  width: 100px;
-  z-index: 1000001;
-  border: 3px solid white;
-  border-radius: 10px;
-  animation: rotate 1.5s ease-in-out infinite alternate;
-  justify-self: center;
-  /*display: none;*/
+    height: 50px;
+    width: 100px;
+    z-index: 1000001;
+    border: 3px solid white;
+    border-radius: 10px;
+    animation: rotate 1.5s ease-in-out infinite alternate;
+    justify-self: center;
+    /*display: none;*/
   }
 
-.message {
-  color: white;
-  font-size: 1.5rem;
-  margin-top: 40px;
-  text-align: center;
-  
-  /*display: none;*/
-}
+  .message {
+    color: white;
+    font-size: 1.5rem;
+    margin-top: 40px;
+    text-align: center;
 
-@keyframes rotate {
-  0% {
-		transform: rotate(0deg)
-	}
-	50% {
-		transform: rotate(-90deg)
-	}
-	100% {
-		transform: rotate(-90deg)
-	}
-}
+    /*display: none;*/
+  }
 
+  @keyframes rotate {
+    0% {
+      transform: rotate(0deg);
+    }
+    50% {
+      transform: rotate(-90deg);
+    }
+    100% {
+      transform: rotate(-90deg);
+    }
+  }
 }
 
 @media only screen and (max-device-width: 812px) and (orientation: landscape) {
   .rotate {
     display: block;
-    display:grid;
+    display: grid;
     flex-direction: column;
     align-content: center;
     justify-content: center;
@@ -353,22 +347,17 @@ body.day #fp-nav ul li a span,
   }
 
   .sectionname {
-display: none;
+    display: none;
   }
 
   .verticalLine {
-display:none
+    display: none;
   }
 
   #fp-nav.fp-left {
-    left:1vw;
-    top: 80vh;
-    bottom: 0;
+    display: none;
   }
-
-
 }
-
 
 @import "home";
 @import "projects";
