--- a/styles/style.scss
+++ b/styles/style.scss
@@ -106,6 +106,12 @@ body {
   }
 }
 
+@media only screen and (max-device-width: 812px) and (orientation: portrait) {
+  .rotate {
+    display: none;
+  }
+}
+
 /*vse za dnevno temo*/
 body.day {
   color: #061a33;
