--- a/styles/style.scss
+++ b/styles/style.scss
@@ -96,7 +96,15 @@ body {
   }
 }
 
-@media only screen and (max-device-width: 812px) and (orientation: landscape) {
+.rotate-landscape{
+  display: block;
+  display: grid;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+}
+
+/*@media only screen and (max-device-width: 812px) and (orientation: landscape) {
   .rotate {
     display: block;
     display: grid;
@@ -104,7 +112,7 @@ body {
     align-content: center;
     justify-content: center;
   }
-}
+}*/
 
 
 /*vse za dnevno temo*/
