--- a/styles/style.scss
+++ b/styles/style.scss
@@ -104,7 +104,7 @@ body {
   justify-content: center;
 }
 
-/*@media only screen and (max-device-width: 812px) and (orientation: landscape) {
+@media only screen and (max-device-width: 812px) and (orientation: landscape) {
   .rotate {
     display: block;
     display: grid;
@@ -112,7 +112,7 @@ body {
     align-content: center;
     justify-content: center;
   }
-}*/
+}
 
 
 /*vse za dnevno temo*/
