--- a/styles/style.css
+++ b/styles/style.css
@@ -157,15 +157,23 @@ body {
           justify-content: center;
 }
 
-/*@media only screen and (max-device-width: 812px) and (orientation: landscape) {
+@media only screen and (max-device-width: 812px) and (orientation: landscape) {
   .rotate {
     display: block;
+    display: -ms-grid;
     display: grid;
-    flex-direction: column;
-    align-content: center;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
-}*/
+}
+
 /*vse za dnevno temo*/
 body.day {
   color: #061a33;
