--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -405,11 +405,12 @@ header {
     .paralax-container {
       grid-row: 3/4;
       grid-column: 1/4;
-      align-self: start;
+      align-self: center;
       justify-self: center;
       margin-top: 5rem;
       margin-bottom: 0rem;
       z-index: -1;
+      margin-right:5rem;
 
       img {
         width: 100vw;
@@ -424,11 +425,12 @@ header {
       justify-self: center;
       margin-top: 5rem;
       margin-bottom: 0rem;
+      margin-right:5rem;
       z-index: -1;
       display: none;
 
       img {
-        width: 100vw;
+        width: 110vw;
         height: auto;
       }
     }
