--- a/styles/style.css
+++ b/styles/style.css
@@ -974,14 +974,15 @@ header .menu-btn.open .menu-btn__burger::after {
     -ms-grid-column: 1;
     -ms-grid-column-span: 3;
     grid-column: 1/4;
-    -ms-flex-item-align: start;
-        -ms-grid-row-align: start;
-        align-self: start;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
     -ms-grid-column-align: center;
         justify-self: center;
     margin-top: 5rem;
     margin-bottom: 0rem;
     z-index: -1;
+    margin-right: 5rem;
   }
   .showcase .paralax-container img {
     width: 100vw;
@@ -1001,11 +1002,12 @@ header .menu-btn.open .menu-btn__burger::after {
         justify-self: center;
     margin-top: 5rem;
     margin-bottom: 0rem;
+    margin-right: 5rem;
     z-index: -1;
     display: none;
   }
   .showcase .paralax-container-2 img {
-    width: 100vw;
+    width: 110vw;
     height: auto;
   }
   .showcase p {
