--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -391,7 +391,7 @@ header {
       align-self: flex-end;
       justify-self: center;
       margin-left: 0rem;
-      margin-bottom: 1rem;
+      margin-bottom: 3rem;
       span {
         justify-self: center;
         margin-left: 0rem;
@@ -421,7 +421,7 @@ header {
     .paralax-container-2 {
       grid-row: 3/4;
       grid-column: 1/4;
-      align-self: start;
+      align-self: center;
       justify-self: center;
       margin-top: 5rem;
       margin-bottom: 0rem;
