--- a/styles/style.css
+++ b/styles/style.css
@@ -957,7 +957,7 @@ header .menu-btn.open .menu-btn__burger::after {
     -ms-grid-column-align: center;
         justify-self: center;
     margin-left: 0rem;
-    margin-bottom: 1rem;
+    margin-bottom: 3rem;
   }
   .showcase h2 span {
     -ms-grid-column-align: center;
@@ -995,9 +995,9 @@ header .menu-btn.open .menu-btn__burger::after {
     -ms-grid-column: 1;
     -ms-grid-column-span: 3;
     grid-column: 1/4;
-    -ms-flex-item-align: start;
-        -ms-grid-row-align: start;
-        align-self: start;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
     -ms-grid-column-align: center;
         justify-self: center;
     margin-top: 5rem;
