--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -384,7 +384,7 @@ header {
     top: 0;
     height: 100vh;
     grid-template-columns: 5% 1fr 5%;
-    grid-template-rows: 68px min-content 1fr;
+    grid-template-rows: 68px min-content min-content;
 
     h2 {
       grid-row: 2/3;
@@ -407,15 +407,16 @@ header {
     .paralax-container {
       grid-row: 3/4;
       grid-column: 1/4;
-      align-self: start;
+      align-self: center;
       justify-self: center;
       margin-top: 20vh;
       margin-bottom: 0rem;
       z-index: -1;
       margin-right:5rem;
+    
 
       img {
-        width: 110vw;
+        width: 100vw;
         height: auto;
       }
     }
@@ -423,7 +424,7 @@ header {
     .paralax-container-2 {
       grid-row: 3/4;
       grid-column: 1/4;
-      align-self: start;
+      align-self: center;
       justify-self: center;
       margin-top: 2rem;
       margin-bottom: 0rem;
