--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -384,7 +384,7 @@ header {
     top: 0;
     height: 100vh;
     grid-template-columns: 5% 1fr 5%;
-    grid-template-rows: 68px min-content auto;
+    grid-template-rows: 68px min-content auto 20px;
 
     h2 {
       grid-row: 2/3;
