--- a/styles/style.css
+++ b/styles/style.css
@@ -943,9 +943,9 @@ header .menu-btn.open .menu-btn__burger::after {
     height: 100vh;
     -ms-grid-columns: 5% 1fr 5%;
         grid-template-columns: 5% 1fr 5%;
-    -ms-grid-rows: 68px min-content auto;
-        grid-template-rows: 68px -webkit-min-content auto;
-        grid-template-rows: 68px min-content auto;
+    -ms-grid-rows: 68px min-content auto 20px;
+        grid-template-rows: 68px -webkit-min-content auto 20px;
+        grid-template-rows: 68px min-content auto 20px;
   }
   .showcase h2 {
     -ms-grid-row: 2;
