--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -413,6 +413,7 @@ header {
       margin-bottom: 0rem;
       z-index: -1;
       margin-right:5rem;
+      padding-bottom: 1rem;
 
       img {
         width: 100vw;
@@ -430,6 +431,7 @@ header {
       margin-right:5rem;
       z-index: -1;
       display: none;
+      padding-bottom: 1rem;
 
       img {
         width: 110vw;
