--- a/styles/_projects.scss
+++ b/styles/_projects.scss
@@ -289,7 +289,7 @@
       grid-column: 2/3;
       align-self: center;
       justify-self: center;
-      margin: 5rem 0 0 0;
+      margin: 4rem 0 1rem 0;
       text-align: center;
       line-height: 80%;
       span {
