--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -331,6 +331,7 @@ input[type="submit"] {
       list-style-type: none;
       margin-top: 7rem;
       text-align: center;
+      padding-bottom: 2rem;
       li {
         padding: 1rem;
 
