--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -332,7 +332,7 @@ input[type="submit"] {
       text-align: center;
       padding:0;
       li {
-        padding: 1rem;
+        padding: 0rem 1rem 0 1rem;
 
         .fas,
         .fab {
