--- a/styles/_projects.scss
+++ b/styles/_projects.scss
@@ -94,21 +94,21 @@
             rgba(0, 0, 0, 0.3),
             rgba(0, 0, 0, 0.3)
           ),
-          url("../img/test1.jpg");
+          url("../img/oakneagle.jpg");
       }
       .andSlika {
         background-image: linear-gradient(
             rgba(0, 0, 0, 0.3),
             rgba(0, 0, 0, 0.3)
           ),
-          url("../img/test2.jpg");
+          url("../img/andraztech.jpg");
       }
       .pikSlika {
         background-image: linear-gradient(
             rgba(0, 0, 0, 0.3),
             rgba(0, 0, 0, 0.3)
           ),
-          url("../img/test3.jpg");
+          url("../img/piknikprostorlocice.jpg");
       }
     }
 
