--- a/styles/_projects.scss
+++ b/styles/_projects.scss
@@ -185,18 +185,20 @@
 @media only screen and (max-width: 1024px) {
   .pro {
     display: grid;
-    min-height: 100vh;
-    max-height: fit-content;
+    height:90vh;
+  
     grid-template-columns: 5% 1fr 5%;
-    grid-template-rows: 68px 8% 1fr 0.2fr;
+    grid-template-rows: 68px min-content 1fr min-content;
 
     h2 {
       grid-row: 2/3;
       grid-column: 2/3;
       align-self: center;
       justify-self: center;
+      margin: 3rem 0 1rem 0;
       margin-top: 6rem;
       text-align: center;
+      
       line-height: 80%;
       span {
         margin-left: 0rem;
@@ -229,7 +231,7 @@
       align-self: center;
       justify-self: center;
       /*background-color: white;*/
-      padding: 2rem 2em 4rem 2rem;
+      padding: 2rem 2em 0rem 2rem;
       text-align: center;
       /*color: #061A33; Po koncanem urejanju izbrisi oz dodaj dnevni nacin*/
 
