--- a/styles/_projects.scss
+++ b/styles/_projects.scss
@@ -56,6 +56,7 @@
       padding-right: 0.5rem;
       position: relative;
       z-index: 1;
+      overflow:hidden;
 
       .proSlide {
         z-index: 1;
@@ -87,9 +88,19 @@
           right: -2rem;
           bottom: -2rem;
         }
+
+        .cover {
+          position: absolute;
+          width:100%;
+          height: 100%;
+          background: black;
+          z-index:0;
+        }
       }
 
       .oakSlika {
+        width:100%;
+          height: 100%;
         background-image: linear-gradient(
             rgba(0, 0, 0, 0.3),
             rgba(0, 0, 0, 0.3)
@@ -97,6 +108,8 @@
           url("../img/oakneagle.jpg");
       }
       .andSlika {
+        width:100%;
+          height: 100%;
         background-image: linear-gradient(
             rgba(0, 0, 0, 0.3),
             rgba(0, 0, 0, 0.3)
@@ -104,6 +117,8 @@
           url("../img/andraztech.jpg");
       }
       .pikSlika {
+        width:100%;
+          height: 100%;
         background-image: linear-gradient(
             rgba(0, 0, 0, 0.3),
             rgba(0, 0, 0, 0.3)
