--- a/styles/style.css
+++ b/styles/style.css
@@ -1169,6 +1169,7 @@ header .menu-btn.open .menu-btn__burger::after {
   padding-right: 0.5rem;
   position: relative;
   z-index: 1;
+  overflow: hidden;
 }
 
 .pro .container-projekti .projekt-slika .proSlide {
@@ -1208,17 +1209,31 @@ header .menu-btn.open .menu-btn__burger::after {
   bottom: -2rem;
 }
 
+.pro .container-projekti .projekt-slika .proSlide .cover {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: black;
+  z-index: 0;
+}
+
 .pro .container-projekti .projekt-slika .oakSlika {
+  width: 100%;
+  height: 100%;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.3))), url("../img/oakneagle.jpg");
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../img/oakneagle.jpg");
 }
 
 .pro .container-projekti .projekt-slika .andSlika {
+  width: 100%;
+  height: 100%;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.3))), url("../img/andraztech.jpg");
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../img/andraztech.jpg");
 }
 
 .pro .container-projekti .projekt-slika .pikSlika {
+  width: 100%;
+  height: 100%;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.3))), url("../img/piknikprostorlocice.jpg");
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../img/piknikprostorlocice.jpg");
 }
