--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -30,6 +30,7 @@
     align-self: center;
     justify-self: center;
     list-style-type: none;
+    margin-top: 6rem;
     li {
       padding: 2rem;
       .fas,
@@ -46,7 +47,7 @@
     grid-row: 3/4;
     grid-column: 2/3;
     align-self: start;
-    justify-self: center;
+    justify-self: start;
     margin-left: 5rem;
   }
 
